<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.marcandreher</groupId>
  <artifactId>fusionkit</artifactId>
  <version>1.1.3</version>
  <packaging>jar</packaging>

  <name>fusionkit</name>
  <description>A modern, lightweight Java web framework for rapid application development</description>
  <url>https://github.com/marcandreher/fusionkit</url>
  
  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  
  <developers>
    <developer>
      <id>marcandreher</id>
      <name>Marc Andre Her</name>
      <email>marc@example.com</email>
      <url>https://github.com/marcandreher</url>
    </developer>
  </developers>
  
  <scm>
    <connection>scm:git:git://github.com/marcandreher/fusionkit.git</connection>
    <developerConnection>scm:git:ssh://github.com:marcandreher/fusionkit.git</developerConnection>
    <url>https://github.com/marcandreher/fusionkit/tree/master</url>
  </scm>

  <properties>
    <!-- Project Configuration -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>

    <!-- Web Framework Dependencies -->
    <javalin.version>6.7.0</javalin.version>
    <freemarker.version>2.3.34</freemarker.version>
    <okhttp.version>4.12.0</okhttp.version>

    <!-- Database Dependencies -->
    <mysql.connector.version>9.4.0</mysql.connector.version>
    <hikari.version>7.0.2</hikari.version>

    <!-- Utility Dependencies -->
    <gson.version>2.13.2</gson.version>
    <logback.version>1.5.18</logback.version>
    <lombok.version>1.18.42</lombok.version>
    <toml4j.version>0.7.2</toml4j.version>
    <caffeine.version>3.1.8</caffeine.version>
    <sitemapgen4j.version>1.1.2</sitemapgen4j.version>

    <!-- Testing Dependencies -->
    <junit.version>4.11</junit.version>

    <!-- Plugin Versions -->
    <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
    <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
    <maven.clean.plugin.version>3.5.0</maven.clean.plugin.version>
    <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
    <exec.maven.plugin.version>3.1.0</exec.maven.plugin.version>
    <build.helper.maven.plugin.version>3.4.0</build.helper.maven.plugin.version>
  </properties>

  <dependencies>
    <!-- =============================================== -->
    <!-- Web Framework Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>io.javalin</groupId>
      <artifactId>javalin</artifactId>
      <version>${javalin.version}</version>
    </dependency>
    <dependency>
      <groupId>io.javalin</groupId>
      <artifactId>javalin-rendering</artifactId>
      <version>${javalin.version}</version>
    </dependency>
    <dependency>
      <groupId>org.freemarker</groupId>
      <artifactId>freemarker</artifactId>
      <version>${freemarker.version}</version>
    </dependency>

    <!-- =============================================== -->
    <!-- HTTP Client Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>${okhttp.version}</version>
    </dependency>

    <!-- =============================================== -->
    <!-- Database Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>${mysql.connector.version}</version>
    </dependency>
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>${hikari.version}</version>
    </dependency>

    <!-- =============================================== -->
    <!-- JSON & Configuration Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.moandjiezana.toml</groupId>
      <artifactId>toml4j</artifactId>
      <version>${toml4j.version}</version>
    </dependency>

    <!-- =============================================== -->
    <!-- Logging Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <!-- =============================================== -->
    <!-- Caching Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
      <version>${caffeine.version}</version>
    </dependency>

    <!-- =============================================== -->
    <!-- SEO & Utility Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>com.github.dfabulich</groupId>
      <artifactId>sitemapgen4j</artifactId>
      <version>${sitemapgen4j.version}</version>
    </dependency>

    <!-- =============================================== -->
    <!-- Development Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>

    <!-- =============================================== -->
    <!-- Testing Dependencies -->
    <!-- =============================================== -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <!-- =============================================== -->
    <!-- Resource Configuration -->
    <!-- =============================================== -->
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*.properties</include>
          <include>**/*.xml</include>
          <include>**/*.html</include>
          <include>**/*.ftl</include>
        </includes>
      </resource>
    </resources>

    <!-- =============================================== -->
    <!-- Plugin Management -->
    <!-- =============================================== -->
    <pluginManagement>
      <plugins>
        <!-- Compiler Plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <encoding>UTF-8</encoding>
            <compilerArgs>
              <arg>-parameters</arg>
              <arg>-Xlint:unchecked</arg>
              <arg>-Xlint:deprecation</arg>
            </compilerArgs>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
              <path>
                <groupId>io.javalin.community.openapi</groupId>
                <artifactId>openapi-annotation-processor</artifactId>
                <version>${javalin.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>

        <!-- Resources Plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven.resources.plugin.version}</version>
          <configuration>
            <encoding>UTF-8</encoding>
            <nonFilteredFileExtensions>
              <nonFilteredFileExtension>jar</nonFilteredFileExtension>
              <nonFilteredFileExtension>zip</nonFilteredFileExtension>
              <nonFilteredFileExtension>war</nonFilteredFileExtension>
            </nonFilteredFileExtensions>
          </configuration>
        </plugin>

        <!-- Surefire Plugin for Testing -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <configuration>
            <systemPropertyVariables>
              <java.util.logging.manager>org.apache.logging.log4j.jul.LogManager</java.util.logging.manager>
            </systemPropertyVariables>
          </configuration>
        </plugin>

        <!-- Clean Plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven.clean.plugin.version}</version>
        </plugin>

        <!-- Exec Plugin -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${exec.maven.plugin.version}</version>
        </plugin>

        <!-- Build Helper Plugin -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${build.helper.maven.plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <!-- =============================================== -->
    <!-- Active Plugins -->
    <!-- =============================================== -->
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>